--- a/styles.css
+++ b/styles.css
@@ -24,17 +24,26 @@ body {
     background-color: white;
     padding: 0.1rem 1.6rem 2rem 1.6rem;
     border-radius: 16px;
+    font-size: 1.2rem;
 }
 h1 {
     font-weight: bold;
     text-align: center;
+    font-size: 2.5rem;
 }
 img {
+    width: 720px;
     max-width: 100%;
     border-radius: 16px;
     display: block;
     margin: 0 auto 2rem auto;
     align-items: center;
+    transition: transform 0.2s;
+}
+img:hover {
+    box-shadow: 0 0 10px;
+    cursor:pointer;
+    transform: scale(1.1); 
 }
 h2 {
     margin-bottom: 0;
@@ -84,6 +93,8 @@ tr:hover {
     background: rgb(207, 181, 143);
     margin: 30px auto;
     transition-duration: 0.5s;
+    font-weight: 600;
+    font-size: 1.2rem;
 }
 #login-button:hover {
     background-color: rgb(245, 185, 185);
