--- a/form/styles.css
+++ b/form/styles.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+*, ::before, ::after {
+    box-sizing: border-box;
+}
 body{
-    background-color:color-mix(in srgb, rgb(10, 10, 224) 50%, rgb(76, 255, 76) 50%);
+    font-family: 'Montserrat', sans-serif;
+    background-image: linear-gradient(
+        180deg,
+        #108488,
+        #d4f1ff
+    );    
 }
 .container {
     width: 540px;
@@ -8,8 +17,9 @@ body{
 }
 h1 {
     text-align: center;
-    text-shadow: 0 4px 5px rgb(23, 5, 128);
     color: white;
+    letter-spacing: 1px;
+    margin: 3rem auto 1.8rem auto;
 }
 .form-block {
     background-color: rgba(255, 255, 255, 0.4);
@@ -17,21 +27,72 @@ h1 {
     border-collapse: collapse;
     border-radius: 3vh;
     margin-bottom: 1rem;
+    font-size: 1.2rem;
 }
-.form-control, .form-input {
+.form-input {
     display: block;
+    font-size: 1.2rem;
     width: 100%;
-    margin: 10px auto;
-    padding: 10px 0;
+    padding: 0 16px;
+    height: 2rem;
     border: none;
     border-radius: 10px;
+    margin-bottom: 1rem;
+    transition-duration: 0.5s;
 }
-label {
+.form-input:hover {
+    opacity: 0.8;
+}
+label, p {
     display: block;
-    font-size: 1rem;
     font-weight: 600;
+    margin-bottom: 12px;
+}
+.radio {
+    display: inline;
+    margin-right: 3rem;
+    transform: scale(1.5);
+    cursor: pointer;
 }
 .input-checkbox {
     margin-right: 1rem;
-    margin-bottom: 10px;
+    transform: scale(1.5);
+    cursor: pointer;
+}
+.input-color {
+    width: 100%;
+    height: 3rem;
+    margin-bottom: 16px;
+    cursor: pointer;
+}
+.clue {
+    font-size: smaller;
+    color: rgb(41, 41, 41);
+}
+hr {
+    margin-top: 32px;
+}
+.button {
+    display: block;
+    width: 100%;
+    font-size: 1.2rem;
+    padding: 8px;
+    margin: 16px auto 10px auto;
+    border: none;
+    border-radius: 10px;
+}
+.button button, .button input {
+    background-color: rgb(18, 78, 102);
+    color: white;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+.button button:hover, .button input:hover {
+    background-color: white;
+    color: rgb(18, 78, 102);
+    box-shadow: 0 0 0 2px rgb(18, 78, 102);
+}
+.button button:active, .button input:active {
+    background-color: rgb(18, 78, 102);
+    color: white;
 }
