--- a/login/styles.css
+++ b/login/styles.css
@@ -6,6 +6,7 @@
 body {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-image: linear-gradient(
@@ -15,6 +16,7 @@ body {
     );
     animation-name: bg;
     animation-duration: 1s;
+    animation-timing-function: ease;
     animation-iteration-count: infinite;
 }
 @keyframes bg {
@@ -67,6 +69,59 @@ body {
 div {
     transition-duration: 0.8s;
 }
+.container {
+    display: flex;
+    width: 100%;
+    align-items: right;
+    justify-content: center;
+}
+.side-left{
+    display: inline;
+    width: 100%;
+    align-items: right;
+}
+h2 {
+    text-align: center;
+    margin: 2vh 4vw 2vh 10vw ;
+    font-family: 'Kanit', sans-serif;
+    font-size: 2.2rem;
+    -webkit-animation: glow 1.5s ease-in-out infinite alternate;
+    -moz-animation: glow 1.5s ease-in-out infinite alternate;
+    animation: glow 1.5s ease-in-out infinite alternate;
+}
+@-webkit-keyframes glow {
+    from {
+        color: #ffffff;
+        text-shadow: 0 0 10px #a39193, 0 0 20px #a39193;
+    }
+    to {
+        color: #9b5069;
+        text-shadow: 0 0 20px #a39193, 0 0 30px #a39193;
+    }
+}
+.details {
+    text-align: justify;
+    margin: 2vh 4vw 2vh 10vw ;
+    padding: 1rem;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+#instagram, #medium {
+    font-size: 1.2rem;
+    color: rgb(122, 69, 90);
+    font-weight: 600;
+}
+@media screen and (max-width:900px) {
+    .side-left {
+        display: none;
+    }
+}
+.side-right{
+    display: inline;
+    margin: 0 auto;
+    width: 100%;
+}
 #main-box {
     background-color: white;
     margin: auto;
@@ -79,7 +134,8 @@ h1 {
     font-family: 'Kanit', sans-serif;
     font-size: 2.2rem;
     /*text-shadow: 0 0 5px rgb(113, 113, 253);*/
-    margin: 30px 10% 20px 10%;
+    margin: 0 10% 20px 10%;
+    padding-top: 25px;
     text-align: center;
     letter-spacing: 2px;
 }
@@ -211,7 +267,7 @@ p , a {
     padding-right: 3px;
     font-size: 14px;
 }
-p a:hover {
+p a:hover, #instagram:hover, #medium:hover {
     color: blue;
     text-decoration: underline;
 }
