--- a/login/styles.css
+++ b/login/styles.css
@@ -85,11 +85,9 @@ h2 {
     margin: 2vh 4vw 2vh 10vw ;
     font-family: 'Kanit', sans-serif;
     font-size: 2.2rem;
-    -webkit-animation: glow 1.5s ease-in-out infinite alternate;
-    -moz-animation: glow 1.5s ease-in-out infinite alternate;
     animation: glow 1.5s ease-in-out infinite alternate;
 }
-@-webkit-keyframes glow {
+@keyframes glow {
     from {
         color: #ffffff;
         text-shadow: 0 0 10px #a39193, 0 0 20px #a39193;
